# efofx

./: .gitignore
apps/efofx-estimate/: .coverage  .env.example  README.md  SETUP.md  env.example  pyproject.toml  requirements.txt
apps/efofx-estimate/.do/: app.yaml
apps/efofx-estimate/app/: README.md  main.py
apps/efofx-estimate/app/api/: __init__.py  routes.py
apps/efofx-estimate/app/core/: config.py  constants.py  security.py
apps/efofx-estimate/app/db/: __init__.py  mongodb.py
apps/efofx-estimate/app/middleware/: __init__.py
apps/efofx-estimate/app/models/: __init__.py  chat.py  estimation.py  feedback.py  reference.py  reference_class.py  tenant.py
apps/efofx-estimate/app/services/: __init__.py  chat_service.py  estimation_service.py  feedback_service.py  llm_service.py  reference_service.py  tenant_service.py
apps/efofx-estimate/app/utils/: __init__.py  calculation_utils.py  file_utils.py  validation_utils.py
apps/efofx-estimate/config/prompts/: README.md
apps/efofx-estimate/tests/: README.md  __init__.py  conftest.py  test_reference_class_model.py
apps/efofx-widget/: index.html  package-lock.json  package.json  test-embed.html  vite.config.ts
apps/estimator-mcp-functions/: .eslintrc.json  DEPLOYMENT.md  README.md  package.json  project.yml  vitest.config.js
apps/estimator-project/: DEPLOYMENT.md  README.md  pyproject.toml
apps/estimator-project/.do/: app.yaml
apps/estimator-project/app/: __init__.py  main.py
apps/estimator-project/app/api/: __init__.py  chat.py
apps/estimator-project/app/clients/: __init__.py  mcp.py  openai_client.py
apps/estimator-project/app/core/: __init__.py  config.py  security.py  signing.py
apps/estimator-project/app/observability/: __init__.py  logging.py  metrics.py
apps/estimator-project/app/rcf/: __init__.py  normalize.py  orchestrator.py  schemas.py
apps/estimator-project/app/storage/: __init__.py  audit.py  estimates.py
apps/estimator-project/tests/: __init__.py
apps/scripts/: .env.template  README.md  generate_keys.sh  keygen.py  private_key.pem  public_key.pem
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
docs/: PRD.md  api-contracts-efofx-estimate.md  api-contracts-estimator-mcp-functions.md  architecture.md  bmm-brainstorming-session-2025-11-09.md  bmm-workflow-status.yaml  data-models-efofx-estimate.md  development-guide.md  efofx-architecture-diagrams.md  epics.md  implementation-readiness-report-2025-11-10.md  index.md  project-scan-report.json  source-tree-analysis.md  sprint-status.yaml  validation-report-2025-11-10.md
docs/PRD/: executive-summary.md  functional-requirements.md  implementation-planning.md  index.md  next-steps.md  non-functional-requirements.md  prd-summary.md  product-magic-essence.md  product-scope.md  project-classification.md  references.md  saas-b2b-backend-specific-requirements.md  scope-boundaries.md  success-criteria.md
docs/stories/: 1-1-initialize-white-label-widget-project.context.xml  1-1-initialize-white-label-widget-project.md  1-2-setup-backend-project-structure-dependencies.context.xml  1-2-setup-backend-project-structure-dependencies.md  1-3-configure-digitalocean-deployment-auto-deploy.context.xml  1-3-configure-digitalocean-deployment-auto-deploy.md  1-4-setup-mongodb-atlas-sentry-monitoring.context.xml  1-4-setup-mongodb-atlas-sentry-monitoring.md  1-5-manual-qa-gate-foundation-verification.context.xml  1-5-manual-qa-gate-foundation-verification.md  2-1-create-domain-agnostic-reference-class-mongodb-schema.md  2-2-implement-rcf-matching-algorithm.md  2-3-generate-synthetic-construction-reference-classes.md  2-4-implement-baseline-estimate-calculation.md  2-5-apply-regional-complexity-adjustments.md  2-6-manual-qa-gate-estimation-engine-verification.md  3-1-create-tenant-registration-management.md  3-2-implement-jwt-authentication-token-management.md  3-3-implement-byok-encryption-for-openai-keys.md  3-4-enforce-tenant-isolation-middleware.md  3-5-implement-per-tenant-rate-limiting.md  3-6-create-mongodb-indexes-for-tenant-isolation.md  3-7-manual-qa-gate-multi-tenant-security-verification.md  4-1-create-openai-client-with-byok-support.md  4-2-implement-git-based-prompt-management.md  4-3-generate-estimate-narratives-with-llm.md  4-4-implement-conversational-scoping-chat-engine.md  4-5-implement-llm-response-caching.md  4-6-manual-qa-gate-llm-integration-verification.md  5-1-implement-shadow-dom-widget-container.md  5-2-create-widget-branding-configuration-system.md  5-3-implement-conversational-chat-ui.md  5-4-implement-lead-capture-form.md  5-5-display-estimate-results-in-widget.md  5-6-implement-widget-security-hardening.md  5-7-create-widget-embed-code-documentation.md  5-8-implement-widget-analytics-monitoring.md  5-9-manual-qa-gate-widget-integration-verification.md  6-1-create-customer-feedback-magic-link-system.md  (+11 more)
(+11 files in other folders)
